--- a/index.html
+++ b/index.html
@@ -222,11 +222,9 @@
             <h2 class="caller-h2">一片舞台</h2>
             <h2 class="caller-h2">一群有趣的灵魂相聚于此</h2>
           </div>
-          <div class="col-6 left-border-line left-txt">
-            <img class="logo-img" src="../assets/images/logo.png" />
-          </div>
         </div>
       </div>
+      <img class="section-1-city-img" src="/assets/images/newyork.jpg">
     </div>
     <!-- RIGHT: -->
     <div class="col-12 col-md-6 section-1-right">
@@ -236,7 +234,7 @@
           <div class="theme">《老妇还乡》</div>
         </strong><br /><br />
       </div>
-      <img class="section-1-city-img" src="/assets/images/shanghai.jpeg">
+      <!-- <img class="section-1-city-img" src="/assets/images/shanghai.jpeg"> -->
     </div>
   </div>
 
