add about, play, theater pages

--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
   <div class="navigation-mb" id="alt-nav">
     <div class="row mobile-hide">
       <div class="col-7">
-        <a href="/home-ch">
+        <a href="/index.html">
           <img src="/assets/images/logo.png" height="50px" />
         </a>
       </div>
       <div class="col-5 right-txt">
         <div class="right-txt" style="float:right;">
           <div class="nav-custom-item right-txt">
-            <a href="/home">
+            <a href="/index.html">
               <i class="icofont icofont-globe"></i>
               English
             </a>
@@ -62,7 +62,7 @@
     <div class="container mobile-only">
       <div class="row height-100">
         <div class="col-5">
-          <a href="/home-ch">
+          <a href="/index.html">
             <img src="/assets/images/logo.png" height="40px" />
           </a>
         </div>
@@ -87,22 +87,23 @@
     <div class="vertical-center mobile-hide">
       <div class="row center-txt">
         <div class="col-12">
-          <a href="/home-ch" target="_blank">
+          <a href="/index.html" target="_blank">
             <div class="navigation-action-btn">立即购票</div>
           </a>
         </div>
       </div>
       <div class="row">
         <div class="col-12 col-md-12 row menu-items">
-          <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item active-item" id="item-0"> <a href="/home-ch"
-              class="active-item">剧社主页</a> <i class="icofont icofont-dotted-left"></i> </div>
-          <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-3"> <a href="/play-ch">老妇还乡</a>
+          <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item active-item" id="item-0"> <a
+              href="/index.html" class="active-item">剧社主页</a> <i class="icofont icofont-dotted-left"></i> </div>
+          <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-3"> <a href="/play.html">老妇还乡</a>
           </div>
-          <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-1"> <a href="/past-ch">往届制作</a>
+          <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-1"> <a href="/past.html">往届制作</a>
           </div>
-          <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-3"> <a href="/theater-ch">观演指南</a>
+          <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-3"> <a
+              href="/theater.html">观演指南</a>
           </div>
-          <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-4"> <a href="/about-ch">关于我们</a>
+          <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-4"> <a href="/about.html">关于我们</a>
           </div>
         </div>
       </div>
@@ -152,15 +153,16 @@
       </div>
       <div class="row">
         <div class="col-12 col-md-12 row menu-items center-txt">
-          <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item active-item" id="item-0"> <a href="/home-ch"
-              class="active-item">剧社主页</a> <i class="icofont icofont-dotted-left"></i> </div>
-          <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-3"> <a href="/play-ch">老妇还乡</a>
+          <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item active-item" id="item-0"> <a
+              href="/index.html" class="active-item">剧社主页</a> <i class="icofont icofont-dotted-left"></i> </div>
+          <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-3"> <a href="/play.html">老妇还乡</a>
           </div>
-          <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-1"> <a href="/past-ch">往届制作</a>
+          <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-1"> <a href="/past.html">往届制作</a>
           </div>
-          <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-3"> <a href="/theater-ch">观演指南</a>
+          <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-3"> <a
+              href="/theater.html">观演指南</a>
           </div>
-          <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-4"> <a href="/about-ch">关于我们</a>
+          <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-4"> <a href="/about.html">关于我们</a>
           </div>
           <!-- <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-6"> <a href="https://whartonchinasummit.ticketleap.com/2019/" target="_blank">立即订票</a> </div> -->
         </div>
@@ -192,8 +194,7 @@
       <div class="row">
         <div class="book-bg col-10 white-txt ls-1" style="letter-spacing: 3px;">立即订票</div>
         <div class="col-2 white-bg action-area">
-          <a href="https://whartonchinasummit.ticketleap.com/2019/" target="_blank" class="black-txt"><i
-              class="icofont icofont-dotted-right"></i></a>
+          <a href="/index.html" target="_blank" class="black-txt"><i class="icofont icofont-dotted-right"></i></a>
         </div>
       </div>
     </div>
