--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
   </div>
 
   <div class="section-action" id="speakers-section-action">
-    <a href="/panels-ch">
+    <a href="/past.html">
       <div class="section-action-btn">
         更多往届制作 <i class="icofont icofont-simple-right"></i>
       </div>
