reformat index mobile

--- a/index.html
+++ b/index.html
@@ -234,7 +234,13 @@
           <h5 class="caller-h5">宾大中文戏剧社2021年秋季制作</h5>
           <div class="theme">《老妇还乡》</div>
         </strong><br /><br />
+        <a href="/play.html">
+          <div>
+            了解更多 <i class="icofont icofont-simple-right"></i>
+          </div>
+        </a>
       </div>
+
       <!-- <img class="section-1-city-img" src="/assets/images/shanghai.jpeg"> -->
     </div>
   </div>
