--- a/about.html
+++ b/about.html
@@ -126,7 +126,7 @@
         </div>
         <div class="col-3 col-md-3 center-txt">
           <div class="nav-social-item center-txt">
-            <a href="/assets/images/wechat-code.jpg" target="_blank">
+            <a href="/assets/images/wechat-code.png" target="_blank">
               <i class="icofont icofont-social-wechat"></i>
             </a>
           </div>
@@ -462,7 +462,7 @@
           </div>
           <div class="col-3 center-txt">
             <div class="vertical-center contact-icon">
-              <a href="/assets/images/wechat-code.jpg" target="_blank">
+              <a href="/assets/images/wechat-code.png" target="_blank">
                 <i class="icofont icofont-social-wechat"></i><br />
                 <span class="txt-4-icon">微信<span class="mobile-hide">公众号</span></span>
               </a>
