--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         </div>
         <div class="col-3 col-md-3 center-txt">
           <div class="nav-social-item center-txt">
-            <a href="/assets/images/wechat-code.jpg" target="_blank">
+            <a href="/assets/images/wechat-code.png" target="_blank">
               <i class="icofont icofont-social-wechat"></i>
             </a>
           </div>
@@ -328,7 +328,7 @@
       <div class="col-3 col-md-2 offset-md-1 center-txt">
         <div class="dotted-box vertical-center">
           <div class="vertical-center">
-            <a href="../assets/images/wechat-code.jpg" target="_blank">
+            <a href="../assets/images/wechat-code.png" target="_blank">
               ... 加入我们! ...
             </a>
           </div>
@@ -353,7 +353,7 @@
           </div>
           <div class="col-3 center-txt">
             <div class="vertical-center contact-icon">
-              <a href="/assets/images/wechat-code.jpg" target="_blank">
+              <a href="/assets/images/wechat-code.png" target="_blank">
                 <i class="icofont icofont-social-wechat"></i><br />
                 <span class="txt-4-icon">微信<span class="mobile-hide">公众号</span></span>
               </a>
