--- a/about.html
+++ b/about.html
@@ -58,7 +58,7 @@
             菜单
           </div>
           <div class="nav-custom-item right-txt register-item">
-            <a href="https://whartonchinasummit.ticketleap.com/2019/" target="_blank">
+            <a href="index.html" target="_blank">
               立即订票
               <i class="icofont icofont-dotted-right"></i>
             </a>
@@ -174,7 +174,7 @@
           <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item active-item" id="item-4"> <a
               href="/about.html" class="active-item">关于我们</a><i class="icofont icofont-dotted-left"></i>
           </div>
-          <!-- <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-6"> <a href="https://whartonchinasummit.ticketleap.com/2019/" target="_blank">立即订票</a> </div> -->
+          <!-- <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-6"> <a href="index.html" target="_blank">立即订票</a> </div> -->
         </div>
       </div>
       <div class="row hide" id="m-close-nav">
