--- a/past.html
+++ b/past.html
@@ -53,7 +53,7 @@
             菜单
           </div>
           <div class="nav-custom-item right-txt register-item">
-            <a href="https://whartonchinasummit.ticketleap.com/2019/" target="_blank">
+            <a href="index.html" target="_blank">
               立即订票
               <i class="icofont icofont-dotted-right"></i>
             </a>
@@ -169,7 +169,7 @@
           </div>
           <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-4"> <a href="/about.html">关于我们</a>
           </div>
-          <!-- <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-6"> <a href="https://whartonchinasummit.ticketleap.com/2019/" target="_blank">立即订票</a> </div> -->
+          <!-- <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-6"> <a href="index.html" target="_blank">立即订票</a> </div> -->
         </div>
       </div>
       <div class="row hide" id="m-close-nav">
